--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ uvicorn[standard]==0.30.6
 httpx==0.27.0
 python-dotenv==1.0.1
 pydantic==2.9.2
+django
+djangorestframework
+celery
+redis
+requests
